layout: fix nav positioning on ios
Safari does not take the addressbar into account when using 100vh,
this is the cauase that the navigation is sometimes hidden when
the user scrolls up/down.

changed to 100dvh with fallback to 100vh.

--- a/src/tabs.css
+++ b/src/tabs.css
@@ -62,6 +62,7 @@ input[type="radio"]:checked + label {
   }
   .tabs {
     height: 100vh;
+    height: 100dvh;
     margin-top: 0;
     order: 1;
     overflow: scroll;
